--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: Explorer of decentralized world.
 description: 
 keywords: blockchain, ethereum, cryptos
 author: Chives Head
-language:
+language: zh-CN
 timezone:
 
 # URL
